<resources>
    <string name="app_name">NetMusicAndroid</string>

    <!-- ===================== 页面标题 ===================== -->
    <string name="title_search">搜索</string>
    <string name="title_singer_list">所有歌手</string>
    <string name="title_singer_detail">歌手详情</string>
    <string name="title_upload_song">上架新歌曲</string>
    <string name="title_playlist_detail">歌单详情</string>
    <string name="title_comment">评论</string>
    <string name="title_mycomment">我的评论</string>
    <string name="title_favorites">我的收藏</string>
    <string name="title_mysongs">我发表的歌曲</string>
    <string name="title_login">登录</string>
    <string name="title_register">注册</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>


    <!-- ===================== 无障碍 contentDescription ===================== -->
    <string name="cd_user_avatar">用户头像</string>
    <string name="cd_edit_username">编辑昵称</string>
    <string name="cd_icon_recent_play">最近播放图标</string>
    <string name="cd_icon_my_playlist">我的歌单图标</string>
    <string name="cd_icon_setting">设置图标</string>
    <string name="cd_icon_feedback">帮助反馈图标</string>
    <string name="cd_enter_detail">进入详情页面</string>
    <string name="cd_back_btn">返回上一页</string>
    <string name="cd_add_playlist_icon">新建歌单添加图标</string>
    <string name="cd_close_dialog">关闭弹窗</string>
    <string name="desc_artist_avatar">歌手头像</string>
    <!-- 设置页新增无障碍描述 -->
    <string name="cd_icon_user">个人信息图标</string>
    <string name="cd_icon_logout">退出登录图标</string>
    <string name="cd_icon_theme">主题设置图标</string>
    <string name="cd_arrow_right">前往详情</string>

    <!-- ===================== 页面展示固定文本 ===================== -->
    <string name="text_collect">收藏</string>
    <string name="text_my_comment">我的评论</string>
    <string name="text_fefault_signature">这个人很懒，什么也没留下</string>
    <string name="text_recent_play">最近播放</string>
    <string name="text_recent_play_title">最近播放</string>
    <string name="text_clear_all">清空</string>
    <string name="text_empty_recent_play">暂无播放记录</string>
    <string name="text_my_playlist">我的歌单</string>
    <string name="text_setting">设置</string>
    <string name="text_feedback">帮助与反馈</string>
    <!-- Playlist 歌单页面专属 -->
    <string name="text_my_playlist_title">我的歌单</string>
    <string name="text_create_playlist">新建歌单</string>
    <string name="text_playlist_total_count">共 %d 个歌单</string>
    <!-- Setting 设置页面专属 -->
    <string name="text_setting_title">设置</string>
    <string name="text_group_account">账号</string>
    <string name="text_group_common">通用</string>
    <string name="text_modify_user_info">修改个人信息</string>
    <string name="text_logout">退出登录</string>
    <string name="text_modify_theme">修改主题</string>

    <!-- ===================== tools 预览占位文本（仅编辑器预览） ===================== -->
    <string name="toast_demo_username">Music_Lover</string>
    <string name="toast_demo_signature">音乐是生活的一部分。</string>

    <!-- ===================== 新建歌单弹窗文本（当前布局新增） ===================== -->
    <string name="text_dialog_create_playlist_title">新建歌单</string>
    <string name="text_playlist_name_label">歌单名称</string>
    <string name="hint_input_playlist_name">请输入歌单名称</string>
    <string name="text_word_count_default">0/30</string>
    <string name="text_btn_cancel">取消</string>
    <string name="text_btn_confirm">确认</string>

    <!-- ===================== Toast 提示文案 ===================== -->
    <string name="toast_go_modify_info">前往修改个人信息页面</string>
    <string name="toast_logout_success">已退出登录</string>
    <string name="toast_go_modify_theme">前往主题设置页面</string>

</resources>